--- a/backend/package.json
+++ b/backend/package.json
@@ -12,5 +12,8 @@
     "axios": "^1.7.3",
     "cors": "^2.8.5",
     "express": "^4.19.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.4"
   }
 }
